Suresh/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: 939669539202.dkr.ecr.us-east-1.amazonaws.com/wetasker:latest
          ports:
            - containerPort: 5000
